Tue Oct 25 02:12:08 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/markup/simple_markup.rb (SM::SimpleMarkup::LABEL_LIST_RE):
	  reduce redundant backtrack.  [ruby-talk:161771]

Tue Oct 25 00:27:35 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/*: RDoc documentation from Eric Hodel
	  <drbrain@segment7.net> added.

Mon Oct 24 21:14:29 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, io.c: use sys/syscall.h if syscall.h is not available.
	  [ruby-core:06247]

Mon Oct 24 20:49:45 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/Win32API/lib/win32/resolv.rb (get_info): support multiple DNS.
	  fixed: [ruby-list:40058], [ruby-dev:27479]

Mon Oct 24 07:57:56 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/tk/lib/tk/canvas.rb (TkCanvasItemConfig::__item_val2ruby_optkeys):
	  typo fixed.  [ruby-talk:162187]

	* ext/tk/lib/tk/menu.rb (TkMenuEntryConfig::__item_val2ruby_optkeys):
	  ditto.  [ruby-core:06359]

Sun Oct 23 21:50:15 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/enumerator/enumerator.c: applied documentation patch from
	  James Edward Gray II <james@grayproductions.net>.
	  [ruby-core:06348]

Sun Oct 23 07:11:11 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/extconf.rb: improve messages [ruby-core:06325].

	* ext/tk/lib/tk.rb, ext/tk/lib/tk/canvas.rb, ext/tk/lib/tk/entry.rb,
	  ext/tk/lib/tk/frame.rb, ext/tk/lib/tk/image.rb,
	  ext/tk/lib/tk/itemconfig.rb, ext/tk/lib/tk/labelframe.rb,
	  ext/tk/lib/tk/listbox.rb, ext/tk/lib/tk/menu.rb,
	  ext/tk/lib/tk/radiobutton.rb, ext/tk/lib/tk/scale.rb,
	  ext/tk/lib/tk/spinbox.rb, ext/tk/lib/tk/text.rb,
	  ext/tk/lib/tk/toplevel.rb: improve conversion of option values.

	* ext/tk/lib/tkextlib/*: ditto.

	* ext/tk/lib/tkextlib/*: update to support ActiveTcl8.4.11.2.

	* ext/tk/lib/tkextlib/trofs/*: support Trofs 0.4.3.

	* ext/tk/lib/tkextlib/tile/*: support Tile 0.7.2.

	* ext/tk/lib/tkextlib/vu/*: support vu 2.3.0.
